Set up the project & set up dummy endpoints
* Added the C# project
* Installed Umbraco and the references
* Set up the grunt MSBuild
* Added dummy endpoints based on Kyle's request so he can wire it in on the front

https://trello.com/c/SI11hmnr/113-common-fields-aka-favorite-content

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@ FavoriteContent/Umbraco/packages/
 FavoriteContent/Umbraco/FavoriteContent/bin/
 FavoriteContent/Umbraco/FavoriteContent/obj/
 FavoriteContent/Umbraco/.vs/
+FavoriteContent/Umbraco/FavoriteContent/packages/
+FavoriteContent/Umbraco/FavoriteContent/.vs/
