--- a/FavoriteContent/Umbraco/FavoriteContent/FavoriteContent.csproj
+++ b/FavoriteContent/Umbraco/FavoriteContent/FavoriteContent.csproj
@@ -209,8 +209,11 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Constants\JsonSettings.cs" />
     <Compile Include="Controllers\Api\FeaturedContentController.cs" />
+    <Compile Include="Events\SaveAndPublishEvents.cs" />
     <Compile Include="Events\Startup.cs" />
+    <Compile Include="Models\FavoriteContentApiModel.cs" />
     <Compile Include="Models\FavoriteContentModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Respositories\FavoriteContentRepository.cs" />
